[package]
name = "nota"
version = "0.1.0"
authors = ["LudeeD <luiscomsnofim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.33"
log = "0.4.8"
simple_logger = "1.6.0"
serde = {version = "1.0.106", features = ["derive"]}
toml = "0.5.6"
bincode = "1.2.1"
comrak = "0.7"
handlebars = "3.0.1"
walkdir = "2"
pulldown-cmark = "0.7.2"
pulldown-cmark-to-cmark = "5.0.0"
regex = "1"
chrono = "0.4"
ring = "0.16.15"
data-encoding = "2.3.0"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]