[package]
name = "nota"
version = "0.1.0"
authors = ["LudeeD <luiscomsnofim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.8"
env_logger = "0.9.0"
anyhow = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
bincode = "1.3"
glob = "0.3"
handlebars = "4.1.3"
pulldown-cmark = "0.8.0"
opener = "0.5.0"
